# django_server

./: .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  docker-entrypoint.sh  get_ssl.sh  index.html  isaac.sql  pyproject.toml
account/: models.py  views.py
api/: admin.py  apis.py  models.py  urls.py  views.py
api/templates/: adjust.html  hmac_client.html  index.html
apps/api/: admin.py  apis.py  references.py  urls.py  views.py
apps/api/templates/: hmac_client.html
apps/sms/: admin.py  models.py  urls.py  views.py
apps/testrail/: admin.py  apps.py  issue_categories.json  models.py  projects.json  trackers.json  urls.py  views.py
apps/webhook/: admin.py  apps.py  urls.py  views.py
certbot/conf/csr/: 0000_csr-certbot.pem  0001_csr-certbot.pem  0002_csr-certbot.pem  0003_csr-certbot.pem
config/nginx/: nginx.conf
django_login/: settings.py  urls.py
django_server/: settings.py  urls.py
sm/: settings.py  urls.py
sms/: admin.py  models.py  urls.py  views.py
templates/: login.html  modify.html  ng.html  ok.html
webhook/: admin.py  models.py  urls.py  views.py
